--- a/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
+++ b/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
   </div>
 
   <ul class='nav nav-toolbar float-right' [ngClass]="isTopbarShow? 'show':'hide'">
-    <li class="nav-item">
+    <li class="nav-item" *ngIf='isTenantAdminUser'>
       <a class="nav-link top-nav-link" id="settingsSideBar" (click)="ChangeSideBar()">
         <span></span>
         <i class="fa fa-cog"></i>
@@ -32,7 +32,7 @@
 
   <!--mobile end-->
   <ul class='nav nav-toolbar float-right show-toolbar'>
-    <li class="nav-item" *ngIf="isSuperAdminUser">
+    <li class="nav-item" *ngIf="isTenantAdminUser">
       <a class="nav-link top-nav-link" id="settingsSideBar" (click)="ChangeSideBar()">
         <span></span>
         <i id="HomeSettingIcon" *ngIf="!IsMainMenu" class="fa fa-home" title="Home"></i>
@@ -106,19 +106,19 @@
         <a> <span class='nav-icon icon-reportGenerations2' title="Logs"> </span> <span class='nav-title'>Logs</span> </a>
       </li>
 
-      <li [ngClass]="(URL=='/tenants')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isSuperAdminUser" (click)="navigateToTenants()">
+      <li [ngClass]="(URL=='/tenants')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isTenantGroupManager" (click)="navigateToTenants()">
         <a> <span class='nav-icon icon-users-line2' title="Tenants"> </span> <span class='nav-title'>Tenants</span> </a>
       </li>
 
-      <li [ngClass]="(URL=='/tenantgroups')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isSuperAdminUser" (click)="navigateToTenantGroups()">
+      <li [ngClass]="(URL=='/tenantgroups')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isInstantTenantManager" (click)="navigateToTenantGroups()">
         <a> <span class='nav-icon icon-users-line2' title="Tenant Groups"> </span> <span class='nav-title'>Tenant Groups</span> </a>
       </li>
 
-      <li [ngClass]="(URL=='/multiTenantUserAccess')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isSuperAdminUser" (click)="navigateToMultiTenantUserAccess()">
+      <li [ngClass]="(URL=='/multiTenantUserAccess')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isTenantGroupManager" (click)="navigateToMultiTenantUserAccess()">
         <a> <span class='nav-icon icon-roles-line2' title="Multi-Tenant User Access Mapping"> </span> <span class='nav-title'>Tenant User Access</span> </a>
       </li>
 
-      <li [ngClass]="(URL=='/contacttype')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isSuperAdminUser" (click)="navigateToContactType()">
+      <li [ngClass]="(URL=='/contacttype')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isTenantGroupManager" (click)="navigateToContactType()">
         <a> <span class='nav-icon fa fa-address-card' title="Contact Type"> </span> <span class='nav-title'>Contact Type</span> </a>
       </li>
       <li [ngClass]="(URL=='/analytics')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToAnalytics()"
@@ -126,24 +126,24 @@
         <a> <span class='nav-icon icon-rp-yield1' title="Analytics"> </span> <span class='nav-title'>Analytics</span> </a>
       </li>
 
-      <li [ngClass]="(URL=='/tenantConfiguration')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isSuperAdminUser" (click)="navigateToTenantConfig()">
+      <li [ngClass]="(URL=='/tenantConfiguration')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isTenantAdminUser" (click)="navigateToTenantConfig()">
         <a> <span class='nav-icon fa fa-cogs' title="Tenant Configuration"> </span> <span class='nav-title'>Tenant Configuration</span> </a>
       </li>
 
-      <li [ngClass]="(URL=='/settings')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isSuperAdminUser" (click)="navigateToSettings()">
+      <li [ngClass]="(URL=='/settings')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isTenantAdminUser" (click)="navigateToSettings()">
         <a> <span class='nav-icon icon-operations2' title="Configure Assets"> </span> <span class='nav-title'>Configure Assets</span> </a>
       </li>
 
-      <!--<li [ngClass]="(URL=='/renderengines')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isSuperAdminUser" (click)="navigateToRenderEngine()">
+      <!--<li [ngClass]="(URL=='/renderengines')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isTenantAdminUser" (click)="navigateToRenderEngine()">
     <a> <span class='nav-icon icon-reportGenerations2' title="Render Engines"> </span> <span class='nav-title'>Render Engines</span> </a>
   </li>-->
-      <li [ngClass]="(URL=='/country')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isSuperAdminUser" (click)="navigateToCountry()">
+      <li [ngClass]="(URL=='/country')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && (isTenantGroupManager || isTenantAdminUser)" (click)="navigateToCountry()">
         <a> <span class='nav-icon fa fa-flag' title="Country"> </span> <span class='nav-title'>Country</span> </a>
       </li>
-      <li [ngClass]="(URL=='/themeConfiguration')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isSuperAdminUser" (click)="navigateTothemeConfiguration()">
+      <li [ngClass]="(URL=='/themeConfiguration')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isTenantAdminUser" (click)="navigateTothemeConfiguration()">
         <a> <span class='nav-icon fa fa-gear' title="Theme ConfigurationComponent"> </span> <span class='nav-title'>Theme Configuration</span> </a>
       </li>
-      <li [ngClass]="(URL=='/tenantuser')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isSuperAdminUser" (click)="navigateToTenantUsers()">
+      <li [ngClass]="(URL=='/tenantuser')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isInstantTenantManager" (click)="navigateToTenantUsers()">
         <a> <span class='nav-icon icon-users-line2' title="Users"> </span> <span class='nav-title'>Users</span> </a>
       </li>
       <li [ngClass]="(URL=='/statemenetsearch')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToStatemenetSearch()"
