--- a/App/ClientApp/src/app/layout/tenantuser/list/list.component.html
+++ b/App/ClientApp/src/app/layout/tenantuser/list/list.component.html
@@ -1,18 +1,16 @@
 <div class="main-container position-relative">
   <div class="page-title d-flex justify-content-md-between justify-content-end">
     <div class="xs-title">
-      <span class="mr-2">Tenant Users</span>
+      <span class="mr-2">Instant Tenant Users</span>
       <span class="icon-filter filter-btn" id="spnFilter" (click)="isFilter=!isFilter"></span>
     </div>
     <div>
       <button class="btn-add btn-cust" title="Add TenantUser" (click)="navigateToAddTenantUser()" id="btnAddTenantUsers">
-        <span class="fa fa-plus btn-icon-cust btn-icon-fill"></span> Tenan tUser
+        <span class="fa fa-plus btn-icon-cust btn-icon-fill"></span> Instant Tenant User
       </button>
-      <!--<button class="btn-add btn-cust" id="btnAddTenantUsers" routerLink="Add">
-        <span class="fa fa-plus btn-icon-cust btn-icon-fill"></span> TenantUser
-      </button>-->
     </div>
   </div>
+
   <!--desktop view start-->
   <div class="card border-0 mb-3 card-shadow">
     <div class="card-body">
@@ -58,7 +56,6 @@
             <td mat-cell *matCellDef="let element">
               <span *ngIf="element.IsActive">Yes</span>
               <span *ngIf="!element.IsActive">No</span>
-
             </td>
           </ng-container>
 
@@ -67,16 +64,13 @@
             <td mat-cell *matCellDef="let element">
               <div class="action-btns btn-tbl-action">
                 <button type="button" title="View TenantUser" (click)="viewTenantUser(element)" id="btnView" routerLink="View"><span class="fa fa-file-text-o"></span></button>
-                <button type="button" title="Update TenantUser"
-                        *ngIf="element.IsActive" (click)="editTenantUser(element)" id="btnUpdate">
+                <button type="button" title="Update TenantUser" *ngIf="element.IsActive" (click)="editTenantUser(element)" id="btnUpdate">
                   <span class="fa fa-pencil-square-o"></span>
                 </button>
                 <button type="button" (click)="unLockTenantUser(element)" *ngIf="element.IsLocked" title="Unlock TenantUser"><span class="fa fa-lock"></span></button>
                 <button type="button" (click)="unLockTenantUser(element)" *ngIf="!element.IsLocked" title="Lock TenantUser"><span class="fa fa-unlock-alt"></span></button>
-
                 <button type="button" (click)="activeDeactiveTenantUser(element)" title="Deactivate TenantUser" *ngIf="element.IsActive"><span class="fa fa-toggle-on text-success"></span></button>
                 <button type="button" (click)="activeDeactiveTenantUser(element)" title="Activate TenantUser" *ngIf="!element.IsActive"><span class="fa fa-toggle-off text-success"></span></button>
-
               </div>
             </td>
           </ng-container>
@@ -88,6 +82,7 @@
       </div>
     </div>
   </div>
+
   <!--desktop view end-->
   <div class="modal fade cust-modal bd-example-modal-lg" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
@@ -140,12 +135,6 @@
         <select formControlName="TenantUserLockStatus" (change)="onLockStatusSelected($event)" class="form-control">
           <option *ngFor="let item of lockStatusArray" [value]="item.Identifier">{{item.Name}}</option>
         </select>
-        <!--<div>
-          <label class="switch d-block">
-            <input type="checkbox" (change)="lockEventCheck($event.target)" formControlName="LockStatus" [(ngModel)]="TenantUserFilter.LockStatus">
-            <span class="slider round"></span>
-          </label>
-        </div>-->
       </div>
 
       <div class="form-group">
@@ -153,12 +142,6 @@
         <select formControlName="TenantUserActiveStatus" (change)="onActiveStatusSelected($event)" class="form-control">
           <option *ngFor="let item of activeStatusArray" [value]="item.Identifier">{{item.Name}}</option>
         </select>
-        <!--<div>
-          <label class="switch d-block">
-            <input type="checkbox" (change)="activationEventCheck($event.target)" formControlName="ActivationStatus"  [(ngModel)]="TenantUserFilter.ActivationStatus">
-            <span class="slider round"></span>
-          </label>
-        </div>-->
       </div>
     </form>
     <!--[ngClass]="filterClass"-->
